<resources>
    <string name="app_name">ChatApp</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="pass_error">Password must be at least 8 characters</string>
    <string name="email_error">Enter Valid Email</string>
    <string name="error">Invalid Data</string>
    <string name="select_n_photo">Select\nPhoto</string>
    <string name="sign_out">Sign out</string>
    <string name="new_messages">New Messages</string>
    <string name="send">Send</string>
    <string name="last_message">Last Message</string>
</resources>