<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.Login">


    <EditText
        android:id="@+id/et_email_login"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/et_pass_login"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="171dp" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="218dp" />
</LinearLayout>